discussion/kv_engine/174156/174156_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51168: Implement GlobalTask::snooze(SnoozeTime)

We can migrate away from snooze(const double) in a few simpler steps
by implementing snooze(SnoozeTime) and having snooze(const double)
implement in terms of the new function.

Change-Id: I22d10986a6d7dac39cca57e5fb83e2884678435b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-29 17:54:34.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-29 17:55:32.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17204/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9: error: use of undeclared identifier "Expects" [clang-diagnostic-error]
        Expects(desiredSnoozeTime.count() > 0);
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17204/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/executor/snooze_time.h:47:9:
error: use of undeclared identifier "Expects" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17204/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16166/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
